--- a/Google.html
+++ b/Google.html
@@ -11,23 +11,33 @@
         </nav>
         
         <section>
-        <img src="google_logo.png">
-        <div> </div>
-        <button id='bouton2'>Recherche</button>
-        <button id='bouton3'>J'ai de la chance</button>
+        <img src="google_logo.png"> 
+        <input id='recherche' />
         </section>
+
+        <div class ="click">
+        <button id='bouton2'>Recherche Google</button>
+        <button id='bouton3'>J'ai de la chance</button>
+        </div>
         
         <footer>
             <div id="conteneur1">
-        <div>France</div>
+                <div>France</div>
+            </div>
             <div id="conteneur2">
-        <div> <a href = "https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a> </div>
-        <div> <a href = "https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Entreprise</a></div>
-        <div> <a href = "https://www.google.com/intl/fr_fr/about/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1" >À propos</a></div>
-        <div> <a href = "https://support.google.com/websearch?p=fr_consumer_info&hl=fr&fg=1&sa=X&ved=0ahUKEwjh2rvFjN7fAhUDxhoKHcyCA38Q9NMDCAg">Info consommateurs</a></div>
-        <div> <a href = "https://www.google.com/intl/fr_fr/policies/privacy/?fg=1">Confidentialité</a></div>
-        <div> <a href = "https://www.google.com/intl/fr_fr/policies/terms/?fg=1">Conditions</a></div>
-        <div> <a href = "https://www.google.com/preferences?hl=fr">Paramètres</a></div>
+                <div id="gauche"> 
+                <div> <a href = "https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a> </div>
+                <div> <a href = "https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Entreprise</a></div>
+                <div> <a href = "https://www.google.com/intl/fr_fr/about/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1" >À propos</a></div>
+                </div>
+
+                <div id ="droite"> 
+                <div> <a href = "https://support.google.com/websearch?p=fr_consumer_info&hl=fr&fg=1&sa=X&ved=0ahUKEwjh2rvFjN7fAhUDxhoKHcyCA38Q9NMDCAg">Info consommateurs</a></div>
+                <div> <a href = "https://www.google.com/intl/fr_fr/policies/privacy/?fg=1">Confidentialité</a></div>
+                <div> <a href = "https://www.google.com/intl/fr_fr/policies/terms/?fg=1">Conditions</a></div>
+                <div> <a href = "https://www.google.com/preferences?hl=fr">Paramètres</a></div>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
